# EECS-210

./: .gitignore  README.md
Assignment1/: .eslintrc.js  README.md  Rubric 1.docx  package.json  tsconfig.json
Assignment1/src/: index.ts
Assignment2/: README.rst  Rubric 2.docx  main.py  pyproject.toml
Assignment3/: Cargo.toml  README.md  Rubric 3.docx  makefile
Assignment3/src/: main.rs
Assignment4/: README.rst  Rubric 4.docx  main.py  pyproject.toml
Assignment4/scripts/: dev.sh
Assignment4/src/: antisymmetric.py  equivalence.py  main.py  poset.py  reflexive.py  symmetric.py  transitive.py  util.py
Assignment4/tests/: test__antisymmetric.py  test__equivalence.py  test__poset.py  test__reflexive.py  test__symmetric.py  test__transitive.py  tests.py
Assignment5/: README.rst  Rubric 5.docx  _problems.json  main.py  pyproject.toml
Assignment5/scripts/: format.sh  test.sh
Assignment5/src/: function.py  injective.py  main.py  relation.py  surjective.py
Assignment5/tests/: test__function.py  test__injective.py  test__surjective.py  tests.py
Assignment6/: README.rst  Rubric 6.docx  main.py  pyproject.toml
Assignment6/puzzles/: puzzle1.txt  puzzle2.txt  puzzle3.txt  puzzle4.txt  puzzle5.txt
Assignment6/src/: Solver.py  formatter.py  main.py  reader.py
Assignment7/: README.rst  Rubric 7.docx  main.py  pyproject.toml  tests.py
Assignment7/scripts/: format.sh  test.sh
Assignment8/: README.rst  Rubric 8.docx  main.py  pyproject.toml  tests.py
Assignment8/src/: data.py  problem1.py  problem2.py  problem3.py  problem4.py  (+1 more)
scripts/: zip.sh
(+1 files in other folders)
